# video-intercept

./: CMakeLists.txt  README.md  main.cpp
inc/: Define.h  Interception.h  Log.h  Utils.h  VideoInterceptor.h  VideoModel.h
inc/libjpeg-turbo-2.0.5/: README.md
src/: Interception.cpp  Log.cpp  Utils.cpp  VideoInterceptor.cpp  VideoInterceptor.h
